                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 09-03-2005 fixed: Upgrade code incorrectly returned false if the database was empty.
  - 09-03-2005 added: Default options for viewmode, brightness, contrast + gamma.
  - 09-03-2005 added: Resume playback option to video context menu.  It will remember where you were last at in a video, and return there when you select this option.
  - 09-03-2005 fixed: Flickering screen after right thumbstick -> system info while watching a video
  - 09-03-2005 removed: old scanning code in music
  - 08-03-2005 fixed: IMDb thumb was not saved for folder lookups if the folder contained no files.
  - 08-03-2005 fixed: Removed "fuzzy matching" code in video database - fixes same thumb used for The Matrix and The Matrix 2.
  - 08-03-2005 added: Dim LCD backlight if LED is set to off on video playback.  Thanks to Babyblue.
  - 08-03-2005 updated: Italian language file (Thnx to kotix)
  - 08-03-2005 updated: German (Austrian) language file (Thnx to CEOMR)
  - 08-03-2005 added: infolabel values, MusicPlayer.TimeRemaining and VideoPlayer.TimeRemaining
  - 08-03-2005 fixed: music nav, getting content of the root dirs fails with none english languages
  - 08-03-2005 fixed: Button scroller goes from bottom<->top if wraparound is off and the controlup, controldown tags are set to the button scroller.
  - 07-03-2005 fixed: dvd overlay alignment problem.
  - 07-03-2005 changed: max. 10 exceptions in a row instead of endless logging of exceptions
  - 07-03-2005 fixed: Screen ratios were not computed correctly on start of playback when file had already been played once.
  - 07-03-2005 fixed: "View: ..." settings are not applied when <default> path is empty