@@ -144,6 +144,7 @@ public:
   virtual bool	OnMessage(CGUIMessage& message);
   virtual void	OnAction(const CAction &action);
   virtual void	Render();
+  virtual void  FreeResources();
 	void					OnLoadPic(int iPic, int iSlideNumber, D3DTexture *pTexture, int iWidth, int iHeight, int iOriginalWidth, int iOriginalHeight, int iRotate, bool bFullSize);
 	int						NumSlides();
 private:
